fix text overflow in toc sections

--- a/sass/_component_toc.scss
+++ b/sass/_component_toc.scss
@@ -1,6 +1,7 @@
 .toc {
   a {
-    display: inline-block;
+    display: inherit;
+    overflow-wrap: break-word;
     line-height: 1.25;
     padding: ($spacer / 4) 0;
   }
